results/logs/gpu_36431.err
/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(274): error: __host__ or __device__ annotation on lambda requires --extended-lambda nvcc flag
                                        (
                                        ^

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(279): error: a static "__shared__" variable declaration is not allowed inside a host function body
                    float shared_sum[1024];
                          ^

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(288): warning #20092-D: a __shared__ variable "shared_sum" cannot be directly written in a host function
          shared_sum[tid] = sum;
          ^

Remark: The warnings can be suppressed with "-diag-suppress <warning-number>"

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(289): error: calling a __device__ function("__syncthreads") from a __host__ function("operator()") is not allowed
          __syncthreads();
          ^

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(293): warning #20091-D: a __shared__ variable "shared_sum" cannot be directly read in a host function
                  shared_sum[tid] += shared_sum[tid + stride];
                                     ^

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(293): warning #20091-D: a __shared__ variable "shared_sum" cannot be directly read in a host function
                  shared_sum[tid] += shared_sum[tid + stride];
                  ^

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(293): warning #20092-D: a __shared__ variable "shared_sum" cannot be directly written in a host function
                  shared_sum[tid] += shared_sum[tid + stride];
                  ^

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(295): error: calling a __device__ function("__syncthreads") from a __host__ function("operator()") is not allowed
              __syncthreads();
              ^

/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu(299): warning #20091-D: a __shared__ variable "shared_sum" cannot be directly read in a host function
              partial_sums[blockIdx.x] = shared_sum[0];
                                         ^

4 errors detected in the compilation of "/user/7/dialloh/gpu_comp_hmm_regime/src/cuda/kernels/matrix_kernels.cu".
make[2]: *** [src/cuda/kernels/CMakeFiles/hmm_kernels.dir/build.make:77: src/cuda/kernels/CMakeFiles/hmm_kernels.dir/matrix_kernels.cu.o] Error 2
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:256: src/cuda/kernels/CMakeFiles/hmm_kernels.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [Makefile:146: all] Error 2
